<resources>
    <string name="app_name">10119232Latihan2</string>

    <!--    Login Page-->
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="or">OR</string>
    <string name="connect">CONNECT WITH FACEBOOK</string>
    <string name="question">doesn\'t have account ?</string>
    <string name="register"><b> Register</b></string>


    <!--    Almost There Page-->
    <string name="almost">Almost There</string>
    <string name="description">Thank you for registering with us. One more \n step, you need to check your email \n to active your account</string>
    <string name="verify">VERIFY</string>

    <!--    Verify Account Page-->
    <string name="verify_account">Verify your Account</string>
    <string name="verify_description">We have send verification code to your email</string>
    <string name="email_verification">enter verification code here...</string>
    <string name="send">SEND</string>
    <string name="get_code">doesn\'t get the code ?</string>
    <string name="resend"><b> Resend</b></string>

    <!--    Register Page-->
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="blood">Blood Type</string>
    <string name="reshus">Reshus</string>
    <string name="password">Password</string>
    <string name="repass">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="org">Organization</string>
    <string name="job">Job</string>
    <string name="home_address">Home Address</string>
    <string name="default_location">Default Location</string>
    <string name="terms_condition">Agree with Terms and Condition</string>
    <string-array name="bloodtype">
        <item>Blood Type</item>
        <item>A</item>
        <item>B</item>
        <item>AB</item>
        <item>AO</item>
    </string-array>
    <string-array name="reshus">
        <item>Reshus</item>
        <item>positif</item>
        <item>negative</item>
    </string-array>
    <string-array name="job_array">
        <item>Job</item>
        <item>Teacher</item>
        <item>Student</item>
        <item>Programmer</item>
    </string-array>

    <!--    User Home Page-->
    <string name="name"><b>M Faisal Obara</b></string>
    <string name="bloodtype">Blood Type : O</string>
    <string name="score_blood_give"><b>75</b></string>
    <string name="score_blood_received"><b>100</b></string>
    <string name="score_thanks"><b>330</b></string>
    <string name="blood_give">BLOOD GIVE</string>
    <string name="blood_received">BLOOD RECEIVED</string>
    <string name="thanks">THANKS</string>
    <string name="search"><b>Search Donor</b></string>
    <string name="blood_needed"><b>Blood Needed</b></string>
    <string name="message"><b>Message</b></string>
    <string name="donor_history"><b>Donor History</b></string>
    <string name="near_you">Search donor near you</string>
    <string name="user_need_blood">4 Users need blood</string>
    <string name="new_message">5 new message</string>
    <string name="gives_received">5 Gives, 2 Received</string>
</resources>