<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="28dp"
    android:background="@color/blue_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_welcome_logo"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:paddingBottom="20dp"
        app:placeholderText="Username"
        app:placeholderTextColor="@color/white"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@id/logo"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:paddingBottom="20dp"
        app:placeholderText="Password"
        app:placeholderTextColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/username"/>
    
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_outline_white"
        app:layout_constraintTop_toBottomOf="@id/password"/>
    
    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_welcome_fb_login"
        android:padding="8dp"
        android:textColor="@color/white"
        android:text="@string/connect"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_outline_white"
        app:layout_constraintTop_toBottomOf="@id/or"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="28dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/facebook">
    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textColor="@color/white"/>

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnRegister"
            android:text="@string/register"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>