<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserHomeActivity">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/ic_header_profile"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/side_menu"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_side_menu"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_notification"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/side_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/side_menu"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/profile"
        app:shapeAppearanceOverlay="@style/roundedImage"
        app:strokeWidth="5dp"
        android:background="@color/classic_blue"
        app:strokeColor="@color/white"
        android:padding="3dp"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/header"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="22sp"
        android:textColor="@color/blue_background"
        app:layout_constraintTop_toBottomOf="@id/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/bloodtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bloodtype"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_register"
        android:layout_marginTop="@dimen/dimen10dp"
        app:layout_constraintTop_toBottomOf="@id/bloodtype"/>

    <TextView
        android:id="@+id/score1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen10dp"
        android:text="@string/score_blood_give"
        android:textColor="@color/blue_background"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintEnd_toStartOf="@id/score2"/>

    <TextView
        android:id="@+id/score2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen10dp"
        android:text="@string/score_blood_received"
        android:textColor="@color/blue_background"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/score3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen10dp"
        android:text="@string/score_thanks"
        android:textColor="@color/blue_background"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/score2"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/blood_give"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_give"
        app:layout_constraintTop_toBottomOf="@id/score1"
        app:layout_constraintStart_toStartOf="@id/score1"
        app:layout_constraintEnd_toEndOf="@id/score1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_received"
        app:layout_constraintTop_toBottomOf="@id/score2"
        app:layout_constraintStart_toStartOf="@id/score2"
        app:layout_constraintEnd_toEndOf="@id/score2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks"
        app:layout_constraintTop_toBottomOf="@id/score3"
        app:layout_constraintStart_toStartOf="@id/score3"
        app:layout_constraintEnd_toEndOf="@id/score3"/>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_register"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/blood_give"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/search_donor_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_search_donor"
        app:shapeAppearanceOverlay="@style/roundedImage"
        app:strokeColor="@color/white"
        android:padding="3dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintEnd_toStartOf="@id/blood_needed_image"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/blood_needed_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_blood_needed"
        app:shapeAppearanceOverlay="@style/roundedImage"
        app:strokeColor="@color/white"
        android:padding="3dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/search_donor_image"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/search_donor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/search_donor_image"
        app:layout_constraintStart_toStartOf="@id/search_donor_image"
        app:layout_constraintEnd_toEndOf="@id/search_donor_image"/>

    <TextView
        android:id="@+id/blood_needed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_needed"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/blood_needed_image"
        app:layout_constraintStart_toStartOf="@id/blood_needed_image"
        app:layout_constraintEnd_toEndOf="@id/blood_needed_image"/>

    <TextView
        android:id="@+id/near_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/near_you"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/search_donor"
        app:layout_constraintStart_toStartOf="@id/search_donor"
        app:layout_constraintEnd_toEndOf="@id/search_donor"/>

    <TextView
        android:id="@+id/user_blood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_need_blood"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/blood_needed"
        app:layout_constraintStart_toStartOf="@id/blood_needed"
        app:layout_constraintEnd_toEndOf="@id/blood_needed"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/message_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_message"
        app:shapeAppearanceOverlay="@style/roundedImage"
        app:strokeColor="@color/white"
        android:padding="3dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/near_you"
        app:layout_constraintEnd_toStartOf="@id/blood_needed_image"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/history_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_donor_history"
        app:shapeAppearanceOverlay="@style/roundedImage"
        app:strokeColor="@color/white"
        android:padding="3dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/message_image"
        app:layout_constraintTop_toBottomOf="@id/near_you"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/message_image"
        app:layout_constraintStart_toStartOf="@id/message_image"
        app:layout_constraintEnd_toEndOf="@id/message_image"/>

    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donor_history"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/history_image"
        app:layout_constraintStart_toStartOf="@id/history_image"
        app:layout_constraintEnd_toEndOf="@id/history_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_message"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/message"
        app:layout_constraintStart_toStartOf="@id/message"
        app:layout_constraintEnd_toEndOf="@id/message"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gives_received"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/history"
        app:layout_constraintStart_toStartOf="@id/history"
        app:layout_constraintEnd_toEndOf="@id/history"/>
</androidx.constraintlayout.widget.ConstraintLayout>