<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen28dp"
    android:background="@color/blue_background"
    tools:context=".AlmostActivity">

    <TextView
        android:id="@+id/almost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/almost"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/verify"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen32sp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen16dp"
        app:layout_constraintTop_toBottomOf="@id/almost"
        android:text="@string/description"
        android:textColor="@color/white"
        android:gravity="center"/>

    <Button
        android:id="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18dp"
        android:text="@string/verify"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_outline_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="btnVerify"/>
</androidx.constraintlayout.widget.ConstraintLayout>